Contreller check and modifed.